Fix map fullscreen icon alignment

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/menu.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/menu.less
@@ -8,6 +8,16 @@
   z-index: 1; // keep map on top of case list
 }
 
+// override leaflet-fullscreen styles to fix icon alignment in mapbox.js
+.leaflet-touch {
+  .leaflet-control-fullscreen a {
+    background-position: 0px 0px !important;
+  }
+  &.leaflet-fullscreen-on .leaflet-control-fullscreen a {
+    background-position: 0px -26px !important;
+  }
+}
+
 #menu-region .module-menu-container,
 #menu-region .module-case-list-container {
   background-color: white;
